src/assets/styles/modules/modal.scss
.info__modal {
  position: fixed;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -40%);
  width: 50%;
  height: 38%;
  background: $color-7;
  background: rgba($color-7, .85);
  color: $color-1;
  font-size: 1.1rem;
  margin: 0 auto;
  padding: 4em 3em 2em;
  z-index: 5;
  visibility: hidden;
  backface-visibility: hidden;
  transition: all .2s ease-in;
}

.info-visible {
  visibility: visible;
}

.info__overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  visibility: hidden;
  top: 0;
  left: 0;
  z-index: 4;
  opacity: 0;
  transition: all .2s;
}

.info-visible ~ .info__overlay {
  opacity: 1;
  visibility: visible;
  background: rgba($color-8, .9);
}

.info__close {
  position: absolute;
  top: .8em;
  right: .8em;
  text-transform: uppercase;
  background-color: transparent;
  border: 0;
  color: $color-3;
  padding: .4em .8em;
  cursor: pointer;
    &:hover {
      color: $color-9;
    }
}

@media screen and (max-width: $mq-medium) {
  .info__modal {
    height: 60%;
  }
}

@media screen and (max-width: $mq-small) {
  .info__modal {
    width: 100%;
    height: 100%;
  }

  .info__modal p:first-child {
    padding-top: 18%;
  }

  .info__close {top: 4em;}
}

